--- a/C Classifier Evaluation.ipynb
+++ b/C Classifier Evaluation.ipynb
@@ -23,9 +23,8 @@
    "metadata": {},
    "source": [
     "## Warm-up Task(s)\n",
-    "In ClassificationFun/main.py:\n",
-    "1. Write a function called `randomize_in_place(data, parallel_list=None)` that accepts at least one list and shuffles the elements of the list. If a second list is passed in, it should be shuffled in the same order.\n",
-    "1. Make a copy of the `train` and `train_labels` lists. Pass them into your function and make sure they get shuffled in parallel :)"
+    "1. Please answer the morning question at http://PollEv.com/ginasprint096\n",
+    "1. Open ClassificationFun/main.py, that's it!"
    ]
   },
   {
@@ -247,9 +246,8 @@
     "Coffee acidity labels: dry, sharp, moderate, or dull\n",
     "<img src=\"https://raw.githubusercontent.com/GonzagaCPSC322/U4-Supervised-Learning/master/figures/multi_class_accuracy_exercise.png\" width=\"400\">\n",
     "\n",
-    "1st Approach (percent correctly classified):\n",
-    "\n",
-    "2nd Approach (average accuracy per label). First let's do the label dry:\n",
+    "1. 1st Approach (percent correctly classified):\n",
+    "1. 2nd Approach (average accuracy per label). First let's do the label dry:\n",
     "\n",
     "<img src=\"https://raw.githubusercontent.com/GonzagaCPSC322/U4-Supervised-Learning/master/figures/multi_class_exercise_matrix.png\" width=\"400\">\n",
     "\n",
