--- a/D Naive Bayes.ipynb
+++ b/D Naive Bayes.ipynb
@@ -22,6 +22,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Warm-up Task(s)\n",
+    "In ClassificationFun/main.py:\n",
+    "1. Write a function called `randomize_in_place(data, parallel_list=None)` that accepts at least one list and shuffles the elements of the list. If a second list is passed in, it should be shuffled in the same order.\n",
+    "1. Make a copy of the `train` and `train_labels` lists. Pass them into your function and make sure they get shuffled in parallel :)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Naive Bayesian Classification\n",
     "Basic ideas\n",
     "* Predict class labels based on probabilities (statistics)\n",
