--- a/D Naive Bayes.ipynb
+++ b/D Naive Bayes.ipynb
@@ -32,6 +32,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Today \n",
+    "* Announcements\n",
+    "    * RQ5 due on **Tuesday** (so you can check your work after some examples of Naive Bayes we will do on Tuesday)\n",
+    "    * PA4 due Wednesday\n",
+    "* Classifier evaluation metrics\n",
+    "* Start of Naive Bayes classification\n",
+    "* IQ5 last ~15 mins of class"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Naive Bayesian Classification\n",
     "Basic ideas\n",
     "* Predict class labels based on probabilities (statistics)\n",
@@ -106,8 +119,13 @@
     "Some notes:\n",
     "* Step 5 is an optimization: comparing entire rows is expensive (esp. if many attributes)\n",
     "* For smaller datasets, there may also not be any matches\n",
-    "* Can extend the approach to support continuous attributes...\n",
-    "\n",
+    "* Can extend the approach to support continuous attributes..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Lab Tasks\n",
     "### Lab Task 1\n",
     "Consider the following labeled dataset, where result denotes class information and the remaining columns have categorical values.\n",
@@ -123,43 +141,19 @@
     "|1|5|yes|\n",
     "|1|6|yes|\n",
     "\n",
-    "1. What is $P(result = yes)$ and $P (result = no)$ given the dataset?\n",
-    "1. If $X = [1,5]$, what is $P(X|result = yes)$ and $P(X|result = no)$ if we assume conditional independence? Show your work.\n",
-    "1. Using Naive Bayes with conditional independence, what would the class label prediction be for the instance $X = [1, 5]$? Show your work.\n",
-    "\n",
-    "### Lab Task 2\n",
-    "iPhone Purchases (Fake)\n",
-    "\n",
-    "|standing |job_status |credit_rating |buys_iphone|\n",
-    "|-|-|-|-|\n",
-    "|1 |3 |fair |no|\n",
-    "|1 |3 |excellent |no|\n",
-    "|2 |3 |fair |yes|\n",
-    "|2 |2 |fair |yes|\n",
-    "|2 |1 |fair |yes|\n",
-    "|2 |1 |excellent |no|\n",
-    "|2 |1 |excellent |yes|\n",
-    "|1 |2 |fair |no|\n",
-    "|1 |1 |fair |yes|\n",
-    "|2 |2 |fair |yes|\n",
-    "|1 |2 |excellent |yes|\n",
-    "|2 |2 |excellent |yes|\n",
-    "|2 |3 |fair |yes|\n",
-    "|2 |2 |excellent |no|\n",
-    "|2 |3 |fair |yes|\n",
-    "\n",
-    "* buys_iphone is the class (with labels \"yes\" and \"no\")\n",
-    "* standing: 1 = lower division, 2 = upper division\n",
-    "* job status: 1 = none, 2 = < 20 hrs, 3 = $\\geq$ 20 hrs\n",
-    "\n",
-    "Tasks TBA..."
+    "1. Compute the priors for the dataset (e.g. what is $P(result = yes)$ and $P (result = no)$?)\n",
+    "1. Compute the posteriors (conditional probabilities) for the dataset by making a table like Bramer 3.2 (e.g. what is $P(att1 = 1|result = yes)$, $P(att1 = 2|result = yes)$, $P(att2 = 5|result = yes)$, ...\n",
+    "1. If $X = [1, 5]$, what is $P(result = yes|X)$ and $P(result = no|X)$ assuming conditional independence? Show your work.\n",
+    "    1. What would the class label prediction be for the instance $X = [1, 5]$? Show your work.\n",
+    "1. If $X = [1, 5]$, what is $P(result = yes|X)$ and $P(result = no|X)$ *without* assuming conditional independence? Show your work.\n",
+    "    1. What would the class label prediction be for the instance $X = [1, 5]$? Show your work."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3/4 Warm-up Task(s)\n",
+    "### Lab Task 2\n",
     "Example adapted from [this Naive Bayes example](https://www.geeksforgeeks.org/naive-bayes-classifiers/)\n",
     "\n",
     "Suppose we have the following dataset that has four attributes and a class attribute (PLAY GOLF):\n",
@@ -183,21 +177,8 @@
     "\n",
     "Suppose we have a new instance X = \\[Sunny, Hot, Normal, False\\]. \n",
     "1. What is $P(PLAY GOLF = Yes|X)$? \n",
-    "1. What is $P(PLAY GOLF = No|X)$? "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 3/6 Warm-up Task(s)\n",
-    "Open ClassificationFun/main.py\n",
-    "1. What is P(att1 = 2 | result = yes)?\n",
-    "1. What is P(att2 = 3 | result = yes)?\n",
-    "1. What is P(result = yes | X = \\[2, 3\\])?\n",
-    "1. What is P(result = no | X = \\[2, 3\\])?\n",
-    "1. What is Naive Bayes' prediction for X = \\[2, 3\\]?\n",
-    "    1. How does this compare to kNN's prediction for X?"
+    "1. What is $P(PLAY GOLF = No|X)$? \n",
+    "1. What is the prediction for X?"
    ]
   },
   {
@@ -212,16 +193,146 @@
     "$$P(v_k|C) = g(v_k, \\mu_C, \\sigma_C)$$\n",
     "where the Gaussian function $g$ is defined as:\n",
     "$$g(x, \\mu, \\sigma) = \\frac{1}{\\sqrt{2\\pi}\\sigma}e^{-\\frac{(x-\\mu)^2}{2\\sigma^2}}$$\n",
-    "* This looks pretty messy, but it is relatively straightforward in Python:\n",
-    "```python\n",
+    "* This looks pretty messy, but it is relatively straightforward in Python:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import math\n",
     "def gaussian(x, mean, sdev):\n",
     "    first, second = 0, 0\n",
     "    if sdev > 0:\n",
     "        first = 1 / (math.sqrt(2 * math.pi) * sdev)\n",
     "        second = math.e ** (-((x - mean) ** 2) / (2 * (sdev ** 2)))\n",
-    "    return first * second\n",
-    "```"
+    "    return first * second"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lab Task 3\n",
+    "Open ClassificationFun/main.py. Let's assume both `att1` `att2` are continuous and sampled from a normal (gaussian) distribution. \n",
+    "1. What is $P(att1 = 2 | result = yes)$?\n",
+    "1. What is $P(att2 = 3 | result = yes)$?\n",
+    "1. What is $P(result = yes | X = [2, 3])$?\n",
+    "1. What is $P(result = no | X = [2, 3])$?\n",
+    "1. What is Naive Bayes' prediction for X = [2, 3]?\n",
+    "1. How does this compare to kNN's prediction for X?\n",
+    "\n",
+    "What is $P(att1 = 2 | result = yes)$? First looking at class C = \"yes\", we need to compute the average and standard deviation of `att1` where C = \"yes\". Then we can compute the posterior $P(att1 = 2 | result = yes)$ using the `gaussian()` function and `att1=2`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 1, 0, 1]\n",
+      "0.17010955993225252\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "train = [\n",
+    "    [3, 2],\n",
+    "    [6, 6],\n",
+    "    [4, 1],\n",
+    "    [4, 4],\n",
+    "    [1, 2],\n",
+    "    [2, 0],\n",
+    "    [0, 3],\n",
+    "    [1, 6]\n",
+    "]\n",
+    "train_labels = [\"no\", \"yes\", \"no\", \"no\", \"yes\", \"no\", \"yes\", \"yes\"]\n",
+    "test = [2, 3]\n",
+    "\n",
+    "att1_class_yes = []\n",
+    "for i, row in enumerate(train):\n",
+    "    if train_labels[i] == \"yes\":\n",
+    "        att1_class_yes.append(row[0])\n",
+    "print(att1_class_yes)\n",
+    "mean = np.mean(att1_class_yes)\n",
+    "stdev = np.std(att1_class_yes)\n",
+    "# note: v_k (x is the formula) is test[0] att1 = 2\n",
+    "p_att1_2_given_class_yes = gaussian(test[0], mean, stdev)\n",
+    "print(p_att1_2_given_class_yes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What is $P(att2 = 3 | result = yes)$? Repeat the above for `att2` where C = \"yes\" and `att2=3`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 2, 3, 6]\n",
+      "0.17488003967875107\n"
+     ]
+    }
+   ],
+   "source": [
+    "att2_class_yes = []\n",
+    "for i, row in enumerate(train):\n",
+    "    if train_labels[i] == \"yes\":\n",
+    "        att2_class_yes.append(row[1])\n",
+    "print(att2_class_yes)\n",
+    "mean = np.mean(att2_class_yes)\n",
+    "stdev = np.std(att2_class_yes)\n",
+    "# note: v_k (x is the formula) is test[1] att2 = 3\n",
+    "p_att2_3_given_class_yes = gaussian(test[1], mean, stdev)\n",
+    "print(p_att2_3_given_class_yes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What is $P(result = yes | X = [2, 3])$? $P(result = yes | X = [2, 3]) = P(att1 = 2 | result = yes) \\times P(att2 = 3 | result = yes) \\times P(result = yes)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.014874383295343602\n"
+     ]
+    }
+   ],
+   "source": [
+    "p_yes_given_test = p_att1_2_given_class_yes * p_att2_3_given_class_yes * (4 / 8)\n",
+    "print(p_yes_given_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Try finishing the rest of the lab task questions from here :)"
    ]
   }
  ],
