--- a/D Naive Bayes.ipynb
+++ b/D Naive Bayes.ipynb
@@ -24,8 +24,8 @@
    "source": [
     "## Warm-up Task(s)\n",
     "In ClassificationFun/main.py:\n",
-    "1. Write a function called `randomize_in_place(data, parallel_list=None)` that accepts at least one list and shuffles the elements of the list. If a second list is passed in, it should be shuffled in the same order.\n",
-    "1. Make a copy of the `train` and `train_labels` lists. Pass them into your function and make sure they get shuffled in parallel :)"
+    "1. Write a function called `randomize_in_place(alist, parallel_list=None)` that accepts at least one list and shuffles the elements of the list. If a second list is passed in, it should be shuffled in the same order.\n",
+    "1. Call your function with the `train` and `train_labels` (parallel lists) lists. Make sure they get shuffled in parallel :)"
    ]
   },
   {
@@ -34,10 +34,12 @@
    "source": [
     "## Today \n",
     "* Announcements\n",
+    "    * Great senior design presentations yesterday!\n",
     "    * RQ5 due on **Tuesday** (so you can check your work after some examples of Naive Bayes we will do on Tuesday)\n",
     "    * PA4 due Wednesday\n",
+    "    * PA5 will be out later today\n",
     "* Classifier evaluation metrics\n",
-    "* Start of Naive Bayes classification\n",
+    "* Start of classification with Naive Bayes\n",
     "* IQ5 last ~15 mins of class"
    ]
   },
