--- a/C Classifier Evaluation.ipynb
+++ b/C Classifier Evaluation.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Warm-up Task(s)\n",
+    "## Warm-up Task(s) 3/2\n",
     "1. Please answer the morning question at http://PollEv.com/ginasprint096\n",
     "1. Open ClassificationFun/main.py, that's it!"
    ]
@@ -31,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Today \n",
+    "## Today  3/2\n",
     "* Announcements\n",
     "    * Let's go over IQ4\n",
     "    * IQ5 on Thursday on data visualization and PA3 topics\n",
@@ -40,6 +40,31 @@
     "* ClassificationFun\n",
     "* Classifier evaluation metrics\n",
     "* Go over PA4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Warm-up Task(s) 3/4\n",
+    "In ClassificationFun/main.py:\n",
+    "1. Write a function called `randomize_in_place(alist, parallel_list=None)` that accepts at least one list and shuffles the elements of the list. If a second list is passed in, it should be shuffled in the same order.\n",
+    "1. Call your function with the `train` and `train_labels` (parallel lists) lists. Make sure they get shuffled in parallel :)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Today 3/4\n",
+    "* Announcements\n",
+    "    * Great senior design presentations yesterday!\n",
+    "    * RQ5 due on **Tuesday** (so you can check your work after some examples of Naive Bayes we will do on Tuesday)\n",
+    "    * PA4 due Wednesday\n",
+    "    * PA5 will be out later today\n",
+    "* Classifier evaluation metrics\n",
+    "* Start of classification with Naive Bayes\n",
+    "* IQ5 last ~15 mins of class"
    ]
   },
   {
