--- a/C Classifier Evaluation.ipynb
+++ b/C Classifier Evaluation.ipynb
@@ -60,7 +60,7 @@
     "* Announcements\n",
     "    * Great senior design presentations yesterday!\n",
     "    * RQ5 due on **Tuesday** (so you can check your work after some examples of Naive Bayes we will do on Tuesday)\n",
-    "    * PA4 due Wednesday\n",
+    "    * PA4 due **Thursday**\n",
     "    * PA5 will be out later today\n",
     "* Classifier evaluation metrics\n",
     "* Start of classification with Naive Bayes\n",
