--- a/D Naive Bayes.ipynb
+++ b/D Naive Bayes.ipynb
@@ -23,7 +23,11 @@
    "metadata": {},
    "source": [
     "## Warm-up Task(s)\n",
-    "TBA"
+    "1. Congrats on making it half-way through the semester!! 🥳\n",
+    "1. Please go to Blackboard and complete the Mid-semester Course Check-in #1 (under Quizzes and Submissions)\n",
+    "    1. This is an anonymous survey to let me know what is going well and what isn't going well in the course\n",
+    "    1. I ready every response!!\n",
+    "1. Pull out your notebook/iPad/etc., we are going to work through alot of Naive Bayes examples today 🤓"
    ]
   },
   {
@@ -31,7 +35,21 @@
    "metadata": {},
    "source": [
     "## Today \n",
-    "TBA"
+    "* Announcements\n",
+    "    * Let's go over IQ5, nice job\n",
+    "    * No class Thursday, catch-up then take a breather!!\n",
+    "    * RQ5 is due tonight\n",
+    "    * PA3 grading note\n",
+    "    * PA4 is due Thursday. A few notes:\n",
+    "        * See my docstring note for `MyKNeighborsClassifier`: `Assumes data has been properly normalized before use.`. It is the calling code's responsibility to normalize data before use with `MyKNeighborsClassifier`\n",
+    "        * An example [Sci-kit Learn](https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.train_test_split.html) documentation page\n",
+    "        * Questions?\n",
+    "    * RQ6 is posted and due on Monday\n",
+    "    * PA5 is posted\n",
+    "    * A book recommendation: [Made to Stick: Why Some Ideas Survive and Others Die](https://www.amazon.com/Made-Stick-Ideas-Survive-Others/dp/1400064287)\n",
+    "* Questions on Classifier evaluation metrics?\n",
+    "* Naive Bayes notes/examples\n",
+    "* Go over PA5"
    ]
   },
   {
